--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chss-module-engine",
   "version": "0.0.1",
   "description": "chess engine related code",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
