--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "uuid-random": "^1.3.2"
+  },
+  "dependencies": {
+    "@tensorflow/tfjs": "^3.17.0",
+    "@tensorflow/tfjs-backend-wasm": "^3.17.0"
   }
 }
