--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/mikilukasik/chss-module-engine#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "assemblyscript": "^0.20.7",
     "babel-preset-env": "^1.7.0",
     "uuid-random": "^1.3.2"
@@ -29,7 +32,9 @@
   "dependencies": {
     "@assemblyscript/loader": "^0.20.7",
     "@tensorflow/tfjs": "^3.17.0",
-    "@tensorflow/tfjs-backend-wasm": "^3.17.0"
+    "@tensorflow/tfjs-backend-wasm": "^3.17.0",
+    "async": "^3.2.4",
+    "jest": "^29.4.3"
   },
   "exports": {
     ".": {
